debugged and brought some more changes for docker netwrok

--- a/spring-boot/src/main/resources/templates/index.html
+++ b/spring-boot/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
         <p class="description">Welcome to our URL shortener service. Please enter the url to get started to get started.</p>
         <div>
             <input placeholder="Type/Paste URL" type="text" name="url" required>
-            <button type="button" onclick="shortenUrl()">Shorten</button>
+            <button type="button" onclick="shortenUrl()" style="cursor: pointer;">Shorten</button>
         </div>
         <div>
             <input type="text" name="key" readonly>
