make html more lookable lol

--- a/flask/templates/error.html
+++ b/flask/templates/error.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap" rel="stylesheet"> 
     <link rel="icon" type="image/png" sizes="24x24" href="{{ url_for('static', filename='icons/skull.png') }}">
     <title>Error!!!</title>
     <style>
@@ -11,7 +14,13 @@
             background-color: #391d1d;
             display: flex;
             align-items: center;
+            justify-content: center; 
+            align-items: center;    
+            height: 100vh;          
             justify-content: center;
+            font-family: "Comic Neue", sans-serif;
+            font-weight: 300;
+            font-style: normal;
             color: aqua;
         }
         .main_wrapper {
