--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -6,123 +6,104 @@
     <link rel="icon" type="image/png" sizes="24x24" href="{{ url_for('static', filename='icons/rail.png') }}">
     <title>Home page</title>
     <style>
-        body{
+        *{
             margin: 0;
-            background-color: #29292c;
+            padding: 0;
+        }
+        .card {
+            height: 100vh;
+            background-color: #191e24;
+            border: 3px solid #387EB8;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            color: aqua;
+            font-size: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            padding: 25px 5px;
+            color: white;
         }
-        .notification {
-        display: flex;
-        flex-direction: column;
-        isolation: isolate;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        background: #29292c;
-        border-radius: 1rem;
-        overflow: hidden;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 16px;
-        --gradient: linear-gradient(to bottom, #2eadff, #3d83ff, #7e61ff);
-        --color: #32a6ff
+        .spinner {
+            width: 70.4px;
+            height: 70.4px;
+            --clr: rgb(247, 197, 159);
+            --clr-alpha: rgb(247, 197, 159,.1);
+            animation: spinner 1.6s infinite ease;
+            transform-style: preserve-3d;
+            margin-bottom: 5vw;
         }
 
-        .notification:before {
-        position: absolute;
-        content: "";
-        inset: 0.0625rem;
-        border-radius: 0.9375rem;
-        background: #18181b;
-        z-index: 2
+        .spinner > div {
+            background-color: var(--clr-alpha);
+            height: 100%;
+            position: absolute;
+            width: 100%;
+            border: 3.5px solid var(--clr);
         }
 
-        .notification:after {
-        position: absolute;
-        content: "";
-        width: 0.25rem;
-        inset: 0.65rem auto 0.65rem 0.5rem;
-        border-radius: 0.125rem;
-        background: var(--gradient);
-        transition: transform 300ms ease;
-        z-index: 4;
+        .spinner div:nth-of-type(1) {
+            transform: translateZ(-35.2px) rotateY(180deg);
         }
 
-        .notification:hover:after {
-        transform: translateX(0.15rem)
+        .spinner div:nth-of-type(2) {
+            transform: rotateY(-270deg) translateX(50%);
+            transform-origin: top right;
         }
 
-        .notititle {
-        color: var(--color);
-        padding: 0.65rem 0.25rem 0.4rem 1.25rem;
-        font-weight: 500;
-        font-size: 1.1rem;
-        transition: transform 300ms ease;
-        z-index: 5;
+        .spinner div:nth-of-type(3) {
+            transform: rotateY(270deg) translateX(-50%);
+            transform-origin: center left;
         }
 
-        .notification:hover .notititle {
-        transform: translateX(0.15rem)
+        .spinner div:nth-of-type(4) {
+            transform: rotateX(90deg) translateY(-50%);
+            transform-origin: top center;
         }
 
-        .notibody {
-        color: #99999d;
-        padding: 0 1.25rem;
-        transition: transform 300ms ease;
-        z-index: 5;
+        .spinner div:nth-of-type(5) {
+            transform: rotateX(-90deg) translateY(50%);
+            transform-origin: bottom center;
         }
 
-        .notification:hover .notibody {
-        transform: translateX(0.25rem)
+        .spinner div:nth-of-type(6) {
+            transform: translateZ(35.2px);
         }
 
-        .notiglow,
-        .notiborderglow {
-        position: absolute;
-        width: 20rem;
-        height: 20rem;
-        transform: translate(-50%, -50%);
-        background: radial-gradient(circle closest-side at center, white, transparent);
-        opacity: 0;
-        transition: opacity 300ms ease;
+        @keyframes spinner {
+        0% {
+            transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
         }
 
-        .notiglow {
-        z-index: 3;
+        50% {
+            transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
         }
 
-        .notiborderglow {
-        z-index: 1;
+        100% {
+            transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
         }
-
-        .notification:hover .notiglow {
-        opacity: 0.1
         }
-
-        .notification:hover .notiborderglow {
-        opacity: 0.1
+        .welcometo {
+            color: #387EB8;
         }
-
-        .note {
-        color: var(--color);
-        position: fixed;
-        top: 80%;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        font-size: 0.9rem;
-        width: 75%;
+        .python {
+            margin-top: -1.15vw;
+            color: #FFE052;
         }
     </style>
 </head>
 <body>
-    <div class="notification">
-        <div class="notiglow"></div>
-        <div class="notiborderglow"></div>
-        <div class="notititle">Welcome To Shorten's Internal API</div>
-        <div class="notibody">Contribute to Open Source contribution</div>
-  </div>
+    <div class="card">
+        <div class="spinner" title="Not loading, just random animation">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div class="text">
+            <span class="welcometo">Welcome to</span> <br> 
+            <span class="python">crush.io's internal API</span>
+        </div>
+    </div>
 </body>
 </html>
