changed message in flask

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="text">
             <span class="welcometo">Welcome to</span> <br> 
-            <span class="python">crush.io's internal API</span>
+            <span class="python">shorten.io's internal API</span>
         </div>
     </div>
 </body>
